<resources>
    <string name="app_name">Memory Lane</string>

    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_description">Description</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_save">SAVE</string>

    <string name="note_text_no_places_found">No Places Found Yet. Kindly add one.</string>
    <string name="image_content_description">image</string>

    <string name="btn_text_view_on_map">VIEW ON MAP</string>
    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>
    <string name="add_new_place">New PLace</string>
    <string name="edit_place">Edit Place</string>

    <string name="google_maps_api_key"></string>
    <string name="place_actions">Place Actions</string>
    <string name="sign_up_link">SIGN UP</string>
    <string name="sign_in_link">SIGN IN</string>
    <string name="go_to_profile">Go to profile</string>
</resources>
