<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_place"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/CustomToolBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp"
        app:contentInsetEnd="0dp"
        app:title="@string/app_name" >

        <!--<Button
            android:id="@+id/btn_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:elevation="4dp"
            android:background="@drawable/baseline_account_circle_48"
            android:backgroundTint="@color/white_color"
            android:contentDescription="@string/go_to_profile" /> -->

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_account_circle_48"
            android:contentDescription="@string/go_to_profile"
            android:elevation="4dp"
            android:backgroundTint="@color/white_color" />


    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_places_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:visibility="gone"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/tv_no_records_found"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/note_text_no_places_found"
        android:textSize="@dimen/no_records_available_text_size"
        android:visibility="visible"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_new_place"
        app:srcCompat="@drawable/baseline_add_24"
        app:backgroundTint="@color/colorAccent" />

    <Button
        android:id="@+id/btn_help"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/place_actions"
        android:background="@drawable/twotone_help_24"
        android:visibility="gone"
        tools:visibility="visible"/>

</FrameLayout>